[package]
name = "chappie"
version = "0.1.0"
keywords = ["chappie", "search"]
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
description = "Search algorithms in Rust."
repository = "https://github.com/aldanor/chappie"
homepage = "https://github.com/aldanor/chappie"

[dependencies]
fnv = "*"
# [dev-dependencies]
rand = "*"

[profile.bench]
opt-level = 3
#debug = true # for profiling
debug-assertions = false
codegen-units = 1

